--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Serialization\FastSerializerObjects_Specs.cs" />
     <Compile Include="Serialization\SerializationApi_Specs.cs" />
     <Compile Include="StateMachine\Anytime_Specs.cs" />
+    <Compile Include="StateMachine\ChannelConfigurator_Specs.cs" />
     <Compile Include="StateMachine\Combine_Specs.cs" />
     <Compile Include="StateMachine\EventException_Specs.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
