--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -524,6 +524,7 @@
     <Compile Include="StateMachine\EventActionList.cs" />
     <Compile Include="StateMachine\ExceptionActionDictionary.cs" />
     <Compile Include="StateMachine\ExpressionAction.cs" />
+    <Compile Include="StateMachine\ExtensionsForChannel.cs" />
     <Compile Include="StateMachine\IStateMachineInspector.cs" />
     <Compile Include="StateMachine\IStateMachineInspectorSite.cs" />
     <Compile Include="StateMachine\LambdaAction.cs" />
@@ -544,6 +545,9 @@
     <Compile Include="ReverseComparer.cs" />
     <Compile Include="FunctionTimer.cs" />
     <Compile Include="Extensions\ExtensionsToTimeSpan.cs" />
+    <Compile Include="StateMachine\ChannelConfiguration\StateMachineChannelConfigurator.cs" />
+    <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
+    <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineException.cs" />
     <Compile Include="StateMachine\StateMachineExpressionInspector.cs" />
     <Compile Include="StateMachine\GraphStateMachineVisitor.cs" />
