--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Channels\Configuration\DisconnectChannelVisitor.cs" />
-    <Compile Include="Channels\ConsumerFactory.cs" />
+    <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Channels\DefaultMailbox.cs" />
     <Compile Include="Channels\Mailbox.cs" />
     <Compile Include="Channels\RequestResponseChannel.cs" />
