--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -116,28 +116,39 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelConnection.cs" />
+    <Compile Include="Channels\ChannelFactory.cs" />
+    <Compile Include="Channels\ChannelConfigurationException.cs" />
     <Compile Include="Channels\Configuration\ChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Configurator.cs" />
+    <Compile Include="Channels\Configuration\ConsumerChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ConsumerChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\DistinctIntervalChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\DistinctIntervalChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForConsumerChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForInstanceChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForIntervalChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForSelectiveConsumerChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForAddConsumer.cs" />
+    <Compile Include="Channels\Configuration\FiberModelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\InstanceChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\IntervalChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\IntervalModelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\SelectiveConsumerChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\InstanceChannelProvider.cs" />
     <Compile Include="Channels\SelectiveConsumerChannel.cs" />
     <Compile Include="Channels\Visitors\GraphChannelVisitor.cs" />
     <Compile Include="Channels\WcfChannelHost.cs" />
     <Compile Include="Channels\WcfChannelProxy.cs" />
-    <Compile Include="Channels\Configuration\AbstractChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ChannelModelConfigurator.cs" />
     <Compile Include="Channels\Configuration\ConnectChannelVisitor.cs" />
-    <Compile Include="Channels\Configuration\ConsumerConfigurator.cs" />
-    <Compile Include="Channels\Configuration\ConsumerConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\DistinctIntervalChannelConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\IntervalChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\InstanceChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\IntervalChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\ConnectionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\Configuration\TypedChannelConnection.cs" />
-    <Compile Include="Channels\Configuration\TypedChannelConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\TypedConfigurator.cs" />
-    <Compile Include="Channels\Configuration\TypedConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\UntypedChannelConnection.cs" />
-    <Compile Include="Channels\Configuration\UntypedChannelConnectionConfigurator.cs" />
-    <Compile Include="Channels\Configuration\UntypedConfigurator.cs" />
-    <Compile Include="Channels\Configuration\UntypedConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\ConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\ChannelConnectionImpl.cs" />
+    <Compile Include="Channels\Configuration\ChannelConfigurator.cs" />
     <Compile Include="Channels\DeserializeChannel.cs" />
     <Compile Include="Channels\DeserializeMessageEnvelopeChannel.cs" />
     <Compile Include="Channels\Visitors\FlattenChannelVisitor.cs" />
