--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -66,6 +66,7 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,10 @@
     <Compile Include="Concurrency\MultipleElementImmutableQueue.cs" />
     <Compile Include="Concurrency\SingleElementImmutableList.cs" />
     <Compile Include="Concurrency\SingleElementImmutableQueue.cs" />
+    <Compile Include="Conf\ConfigurationEntries.cs" />
+    <Compile Include="Conf\ConfigurationEntry.cs" />
+    <Compile Include="Conf\ConfigurationFile.cs" />
+    <Compile Include="Conf\ConfigurationStore.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Fiber.cs" />
     <Compile Include="Fibers\FiberException.cs" />
