more cleanup and a command line

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -179,12 +179,14 @@
     <Compile Include="Concurrency\MultipleElementImmutableQueue.cs" />
     <Compile Include="Concurrency\SingleElementImmutableList.cs" />
     <Compile Include="Concurrency\SingleElementImmutableQueue.cs" />
+    <Compile Include="Configuration\CommandLineValueProvider.cs" />
     <Compile Include="Configuration\ConfigurationDto.cs" />
     <Compile Include="Configuration\ConfigurationEntries.cs" />
     <Compile Include="Configuration\ConfigurationEntry.cs" />
-    <Compile Include="Configuration\ConfigurationFile.cs" />
+    <Compile Include="Configuration\ConfigurationFileValueProvider.cs" />
     <Compile Include="Configuration\ConfigurationHistory.cs" />
     <Compile Include="Configuration\ConfigurationStore.cs" />
+    <Compile Include="Configuration\ConfigurationValueProvider.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Fiber.cs" />
     <Compile Include="Fibers\FiberException.cs" />
@@ -290,21 +292,6 @@
     <Compile Include="CommandLineParser\TokenElement.cs" />
     <Compile Include="CommandLineParser\StringCommandLineParser.cs" />
     <Compile Include="CommandLineParser\TextCommandLineParser.cs" />
-    <Compile Include="CommandLine\Argument.cs" />
-    <Compile Include="CommandLine\ArgumentOrderException.cs" />
-    <Compile Include="CommandLine\Arguments_must_be_positional_then_named.cs" />
-    <Compile Include="CommandLine\ArgumentParsingInstructions.cs" />
-    <Compile Include="CommandLine\ArrayExtensions.cs" />
-    <Compile Include="CommandLine\CommandLineParser.cs" />
-    <Compile Include="CommandLine\IArgumentCommandNameConvention.cs" />
-    <Compile Include="CommandLine\IArgumentNameConvention.cs" />
-    <Compile Include="CommandLine\IArgumentOrderPolicy.cs" />
-    <Compile Include="CommandLine\IArgumentParsingInstructions.cs" />
-    <Compile Include="CommandLine\Argument_long_form_is_full_property_name_lowercased.cs" />
-    <Compile Include="CommandLine\NullArgs.cs" />
-    <Compile Include="CommandLine\ParsedCommandLineOutput.cs" />
-    <Compile Include="CommandLine\Argument_short_form_is_first_letter_lowercase.cs" />
-    <Compile Include="CommandLine\Use_types_name_lowercased_removing_Args_or_Arguments.cs" />
     <Compile Include="ComparisonComparer.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService.cs" />
     <Compile Include="Cryptography\EncryptedText.cs" />
