--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -121,6 +121,7 @@
     <Compile Include="CommandLineParser\PlugInCommands\RemoveRemoteRepositoryCommand.cs" />
     <Compile Include="Concurrency\List_Specs.cs" />
     <Compile Include="Concurrency\Load_Specs.cs" />
+    <Compile Include="Configuration\CommandLineConfigurationSpecs.cs" />
     <Compile Include="Configuration\ConfigurationOverridesSpecs.cs" />
     <Compile Include="Configuration\ConfigurationSpecs.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
@@ -168,13 +169,6 @@
     <Compile Include="Concurrency\Queue_Specs.cs" />
     <Compile Include="RangeParser_Specs.cs" />
     <Compile Include="CommandLineParser\Parser_Specs.cs" />
-    <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
-    <Compile Include="CommandLine\ArgumentWithSameFirstLetter.cs" />
-    <Compile Include="CommandLine\Argument_Spec.cs" />
-    <Compile Include="CommandLine\CommandLineParsing_Specs.cs" />
-    <Compile Include="CommandLine\OneArgument.cs" />
-    <Compile Include="CommandLine\TwoArguments.cs" />
-    <Compile Include="CommandLine\Visualizer.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
     <Compile Include="Data\UnitOfWork_Specs.cs" />
     <Compile Include="Extensions\DateTimeExtension_Specs.cs" />
