Refactored out the first pass and ensured tests were there for new format

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -186,16 +186,13 @@
     <Compile Include="Concurrency\MultipleElementImmutableQueue.cs" />
     <Compile Include="Concurrency\SingleElementImmutableList.cs" />
     <Compile Include="Concurrency\SingleElementImmutableQueue.cs" />
-    <Compile Include="Configuration\CommandLineValueProvider.cs" />
     <Compile Include="Configuration\ConfigurationBinder.cs" />
-    <Compile Include="Configuration\ConfigurationBinderContext.cs" />
-    <Compile Include="Configuration\ConfigurationDto.cs" />
-    <Compile Include="Configuration\ConfigurationEntries.cs" />
-    <Compile Include="Configuration\ConfigurationEntry.cs" />
-    <Compile Include="Configuration\ConfigurationFileValueProvider.cs" />
-    <Compile Include="Configuration\ConfigurationHistory.cs" />
-    <Compile Include="Configuration\ConfigurationStore.cs" />
-    <Compile Include="Configuration\ConfigurationValueProvider.cs" />
+    <Compile Include="Configuration\ConfigurationBinderConfigurator.cs" />
+    <Compile Include="Configuration\Internal\ConfigurationBinderConfiguratorImpl.cs" />
+    <Compile Include="Configuration\ConfigurationBinderFactoryMethod.cs" />
+    <Compile Include="Configuration\Internal\ConfigurationBinderImpl.cs" />
+    <Compile Include="Configuration\Internal\ConfigurationBinderContext.cs" />
+    <Compile Include="Configuration\ConfigurationBinderFactory.cs" />
     <Compile Include="Extensions\ExtensionsToUri.cs" />
     <Compile Include="Fibers\Fiber.cs" />
     <Compile Include="Fibers\FiberException.cs" />
