--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -124,9 +124,10 @@
     <Compile Include="Channels\Configuration\Configurator.cs" />
     <Compile Include="Channels\Configuration\ConsumerChannelConfigurator.cs" />
     <Compile Include="Channels\Configuration\ConsumerChannelConfiguratorImpl.cs" />
-    <Compile Include="Channels\Configuration\DistinctIntervalChannelConfigurator.cs" />
-    <Compile Include="Channels\Configuration\DistinctIntervalChannelConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\DistinctChannelConfigurator.cs" />
+    <Compile Include="Channels\Configuration\DistinctChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForConsumerChannel.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForDistinctChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForInstanceChannel.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForIntervalChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForSelectiveConsumerChannel.cs" />
@@ -235,7 +236,7 @@
     <Compile Include="Channels\InterceptorChannel.cs" />
     <Compile Include="Channels\InterceptorFactory.cs" />
     <Compile Include="Channels\KeyedChannelProvider.cs" />
-    <Compile Include="Channels\DistinctIntervalChannel.cs" />
+    <Compile Include="Channels\DistinctChannel.cs" />
     <Compile Include="Channels\Filter.cs" />
     <Compile Include="Channels\InstanceChannel.cs" />
     <Compile Include="Channels\Internal\MessageDictionary.cs" />
