--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -152,7 +152,7 @@
     <Compile Include="Channels\Configuration\Internal\IntervalChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\ConnectionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\Configuration\ConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Configuration\Internal\ConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\ChannelConnectionImpl.cs" />
     <Compile Include="Channels\Configuration\ChannelConfigurator.cs" />
     <Compile Include="Channels\DeserializeChannel.cs" />
