--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -92,12 +92,13 @@
     <Compile Include="Actors\PingPongDemo\PongActor.cs" />
     <Compile Include="Actors\PingPong_Example.cs" />
     <Compile Include="Actors\ThreadActionScheduler_Specs.cs" />
+    <Compile Include="Binding\Binding_Specs.cs" />
+    <Compile Include="Binding\TestModelBinderContext.cs" />
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\IsHoliday_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="BehaviorTest.cs" />
     <Compile Include="Channels\Aggregator_Specs.cs" />
-    <Compile Include="Channels\ChannelPerformance_Specs.cs" />
     <Compile Include="Channels\ChannelQueue_Specs.cs" />
     <Compile Include="Channels\ChannelSubscription_Specs.cs" />
     <Compile Include="Channels\ChannelVisitor_Specs.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="Configuration\ConfigurationBinder_Specs.cs" />
     <Compile Include="Configuration\ConfigurationOverridesSpecs.cs" />
     <Compile Include="Configuration\ConfigurationSpecs.cs" />
+    <Compile Include="Configuration\NestedValue_Specs.cs" />
     <Compile Include="Cryptography\DpapiCryptographyService_Specs.cs" />
     <Compile Include="Cryptography\RsaCryptographyService_Specs.cs" />
     <Compile Include="Activator\Classes\ClassWithAConstrainedGenericArgument.cs" />
