--- a/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
+++ b/src/Magnum.RulesEngine.Specs/Magnum.RulesEngine.Specs.csproj
@@ -52,7 +52,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\NUnit\nunit.framework.dll</HintPath>
@@ -97,10 +97,6 @@
     <Compile Include="Commands\SubmitOrder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum.RulesEngine.Visualizers\Magnum.RulesEngine.Visualizers.csproj">
-      <Project>{DB58A632-0D01-475E-9C20-A5457653887A}</Project>
-      <Name>Magnum.RulesEngine.Visualizers</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Magnum.RulesEngine\Magnum.RulesEngine.csproj">
       <Project>{0A39AEF0-BBF8-4183-8D8E-A9DEED8A43F3}</Project>
       <Name>Magnum.RulesEngine</Name>
@@ -112,6 +108,10 @@
     <ProjectReference Include="..\Magnum.TestFramework\Magnum.TestFramework.csproj">
       <Project>{D741FD13-08D7-4A71-916E-0D61816D8A80}</Project>
       <Name>Magnum.TestFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Magnum.Visualizers\Magnum.Visualizers.csproj">
+      <Project>{DB58A632-0D01-475E-9C20-A5457653887A}</Project>
+      <Name>Magnum.Visualizers</Name>
     </ProjectReference>
     <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
