--- a/src/Magnum.Visualizers/Magnum.Visualizers.csproj
+++ b/src/Magnum.Visualizers/Magnum.Visualizers.csproj
@@ -109,12 +109,7 @@
     <Compile Include="RulesEngine\RulesEngineGraphGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RulesEngine\RulesEngineDebugVisualizer.cs" />
-    <Compile Include="RulesEngine\RulesEngineVisualizerForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RulesEngine\RulesEngineVisualizerForm.Designer.cs">
-      <DependentUpon>RulesEngineVisualizerForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="RulesEngine\RulesEngineVisualizerObjectSource.cs" />
     <Compile Include="StateMachine\StateMachineDebugVisualizer.cs" />
     <Compile Include="StateMachine\StateMachineGraphGenerator.cs" />
     <Compile Include="StateMachine\StateMachineVisualizerObjectSource.cs" />
