--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -380,6 +380,7 @@
     <Compile Include="Monads\CurryExpressionVisitor.cs" />
     <Compile Include="Monads\State.cs" />
     <Compile Include="Pipeline\Visitors\GraphPipelineVisitor.cs" />
+    <Compile Include="Pipeline\Visitors\PipelineGraphData.cs" />
     <Compile Include="Reflection\ExtensionsToExpressions.cs" />
     <Compile Include="Reflection\ExtensionsToSafeProperty.cs" />
     <Compile Include="Reflection\GenericFastActivator.cs" />
